src/test/deca/context/valid/non_provided/comp_eq.deca
// Description:
//    Comparaison entre un entier et un flottant
//
// Resultats:
//    Ok
// 
// Historique:
//    cree le 16/01/2020

{
    int a = 5; 
    float b = 5.0;

    if(a == b) {
        println("Ok");
    }

    println("Error");
}